--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
     </div>
 
 
-    <!-- Carousel
-    ================================================== -->
+    <!-- Carousel  ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
